examples/bad/5_1_runtime_except.pp
int main() {
    1 / 0; // error

    return 0;
}
